Bug 382122 - K3b on Gnome: missing icon in alt+tab menu and dash (bar on left)
Summary: K3b on Gnome: missing icon in alt+tab menu and dash (bar on left)
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-08 12:41 UTC by Patrick Silva
Modified: 2018-04-09 18:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast (780.96 KB, video/mp4)
2017-07-08 12:41 UTC, Patrick Silva
Details
dash (122.24 KB, image/jpeg)
2017-07-14 12:28 UTC, Patrick Silva
Details
alt+tab menu (170.17 KB, image/jpeg)
2017-07-14 12:29 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-07-08 12:41:10 UTC
Created attachment 106499 [details]
screencast

Watch the screencast please.
I use Arch, Gnome 3.24.2, K3b 17.04.2
Comment 1 Leslie Zhai 2017-07-14 09:18:21 UTC
Hi Dr. Chapatin,

Sorry for my late response!

But please attach a image instead :)

Regards,
Leslie Zhai - a LLVM developer https://reviews.llvm.org/p/xiangzhai/
Comment 2 Patrick Silva 2017-07-14 12:28:51 UTC
Created attachment 106618 [details]
dash
Comment 3 Patrick Silva 2017-07-14 12:29:31 UTC
Created attachment 106619 [details]
alt+tab menu
Comment 4 Leslie Zhai 2017-07-14 15:51:41 UTC
Git commit 2e7743e3d538886997b2ba3be4c85027f5563d61 by Leslie Zhai.
Committed on 14/07/2017 at 15:49.
Pushed by lesliezhai into branch 'master'.

I have no idea why failed to work for libwnck in gnome-shell.
perhaps GNOME developers know the root cause, and I diff the
vokoscreen's desktop, there is no special keywords.
CCMAIL: alberts.muktupavels@gmail.com

M  +2    -2    src/org.kde.k3b.desktop

https://commits.kde.org/k3b/2e7743e3d538886997b2ba3be4c85027f5563d61
Comment 5 Leslie Zhai 2017-07-14 15:53:17 UTC
Ask for GNOME developers to help!(In reply to Leslie Zhai from comment #4)
> Git commit 2e7743e3d538886997b2ba3be4c85027f5563d61 by Leslie Zhai.
> Committed on 14/07/2017 at 15:49.
> Pushed by lesliezhai into branch 'master'.
> 
> I have no idea why failed to work for libwnck in gnome-shell.
> perhaps GNOME developers know the root cause, and I diff the
> vokoscreen's desktop, there is no special keywords.
> CCMAIL: alberts.muktupavels@gmail.com
ask GNOME developers, libwnck's developer, to help!


> 
> M  +2    -2    src/org.kde.k3b.desktop
> 
> https://commits.kde.org/k3b/2e7743e3d538886997b2ba3be4c85027f5563d61
Comment 6 Patrick Silva 2017-07-15 20:35:45 UTC
maybe this bug has the same cause as kolourpaint identical bug?
https://bugs.kde.org/show_bug.cgi?id=382353
Comment 7 Leslie Zhai 2017-07-16 10:23:15 UTC
Thanks for your hint! I know how to fix now :)
Comment 8 Leslie Zhai 2017-07-17 03:11:44 UTC
Git commit 23676751ff3bf43a52c83d5e2818bdafce61f3b6 by Leslie Zhai.
Committed on 17/07/2017 at 03:09.
Pushed by lesliezhai into branch 'master'.

Fix on GNOME wayland session missing icon in alt+tab menu and dash issue

M  +3    -0    src/main.cpp

https://commits.kde.org/k3b/23676751ff3bf43a52c83d5e2818bdafce61f3b6
Comment 9 Patrick Silva 2017-08-19 13:43:47 UTC
this bug is not fixed in k3b 17.08.
Comment 10 Patrick Silva 2017-11-18 03:20:46 UTC
fixed in k3b 17.12 beta.