Fix on GNOME wayland session missing icon in alt+tab menu and dash issue

BUG: 382122